--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "@prisma/client": "^3.8.1",
+    "cors": "^2.8.5",
     "dna-mutation": "^1.0.3",
     "express": "^4.17.2",
     "swagger-jsdoc": "^6.1.0",
