--- a/.env
+++ b/.env
@@ -4,5 +4,5 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server and MongoDB (Preview).
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://gurosuser:guros@ec2-13-52-237-37.us-west-1.compute.amazonaws.com:5432/guros?schema=public"
+DATABASE_URL="postgresql://gurosuser:guros@localhost:5432/guros"
 PORT=3000
