--- a/.env
+++ b/.env
@@ -4,5 +4,5 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server and MongoDB (Preview).
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://gurosuser:guros@localhost:5432/guros?schema=public"
+DATABASE_URL="postgresql://admin:admin@54.177.184.232:5432/kuneapp?schema=guros"
 PORT=80
