--- a/.env
+++ b/.env
@@ -1,8 +1,5 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#using-environment-variables
+# Para que funcione en modo local, es necesario actualizar las llaves de la base de datos
+# con el usuario y contraseña correctos.
 
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server and MongoDB (Preview).
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
-DATABASE_URL="postgresql://:@localhost:5432/guros?schema=public"
+DATABASE_URL="postgresql://{userDB}:{passwordDB}@localhost:5432/guros?schema=public"
 PORT=80
